# empowered-enum

./: README.md  flake.nix  meson.build
src/: eenum.hpp  meson.build  tools.hpp
subprojects/: compile-time-regular-expressions.wrap
test/: eenum.cpp  meson.build
